Выполнил задание по 1 уроку

--- a/Lesson 1/index.html
+++ b/Lesson 1/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-
+    <img src="" alt="">
+    <a href="index.html">Главная</a>
+    <h1>Мой первый сайт</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptates, placeat cum officiis ad natus
+        praesentium quas veritatis eos amet, veniam quaerat, vel delectus est quibusdam? Ea eaque iste voluptatibus!</p>
+    <h3>Заголовок третьего уровня</h3>
+    <h4>Заголовок четвёртого уровня</h4>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo quos provident quod possimus aliquid.</p>
+    <h3>Заголовок третьего уровня</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <hr>
+    <p>Все права защищены</p>
 </body>
 
 </html>
