--- a/Homework8/index.html
+++ b/Homework8/index.html
@@ -80,9 +80,9 @@
             </div>
         </div>
     </div>
-    <div class="footer container">
+    <div class="footer">
         <div class="footer_parent">
-            <div class="footer_item">
+            <div class="footer_item footer_item_margin">
                 <h3 class="footer_heading">Intersted to woek with our team?</h3>
                 <p class="footer__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
@@ -93,8 +93,8 @@
         </div>
         <hr>
         <ol class="list">
-            <li>Lorem ipsum dolor sit amet </li>
-            <li>тел: +1(111)111-11-11 </li>
+            <li class="list_item_margin">Lorem ipsum dolor sit amet </li>
+            <li class="list_item_margin">тел: +1(111)111-11-11 </li>
             <li>email@mail.net</li>
         </ol>
         <p class="footer_rights footer__text">2021 All rights reserved.</p>
